--- a/2.html
+++ b/2.html
@@ -1,15 +1,65 @@
 <!doctype html>
 <html>
-<head>
-  <title> contact </title>
-  <meta charset="UTF-8">
-</head>
-<body>
-  <ul>
-    <li><a href="index.html">intro</a></li>
-    <li><a href="1.html">product</a></li>
-    <li><a href="2.html">contact</a></li>
-  </ul>
-</body>
-  <h1> contact </h1>
-  </html>
+
+  <head>
+    <title> contact </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="basic.css">
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5ce631182846b90c57aff8e0/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </head>
+
+  <body>
+    <div id="whole">
+      <div id="list">
+        <ul>
+          <li><a href="1.html" class="saw">product</a></li>
+          <li><a href="2.html">contact</a></li>
+        </ul>
+      </div>
+
+      <div>
+          <h1><a href="index.html"> DaLice </a> </h1>
+        <div id="contents">
+          <p>
+            <h2> contact </h2>
+            
+          </p>
+          <p>
+            <div id="disqus_thread"></div>
+            <script>
+
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://dalice.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
