--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!doctype html>
 <html>
-<head>
-  <title> intro </title>
-  <meta charset="UTF-8">
-</head>
-<body>
-  <ul>
-    <li><a href="index.html">intro</a></li>
-    <li><a href="1.html">product</a></li>
-    <li><a href="2.html">contact</a></li>
-  </ul>
 
-<h1> intro </h1>
-<img src="https://modo-phinf.pstatic.net/20190506_198/155712444168828qL1_GIF/mosaTcNBry.gif?type=w720"/>
-</body>
+  <head>
+    <title> intro </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="basic.css">
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5ce631182846b90c57aff8e0/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+      <div id="disqus_thread"></div>
+
+  </head>
+
+  <body>
+    <div id="whole">
+      <div id="list">
+        <ul>
+          <li><a href="1.html">product</a></li>
+          <li><a href="2.html">contact</a></li>
+        </ul>
+      </div>
+
+      <div>
+          <h1><a href="index.html"> DaLice </a> </h1>
+        <div id="contents">
+          <p>
+            <h2> intro </h2>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/2UMa_E5_ZxY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
